--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,15 @@
     tools:context=".MainActivity">
 
 
-
     <fragment
-        android:id="@+id/fragment"
+        android:id="@+id/fragmentNavController"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@+id/bottomNav"
         app:layout_constraintEnd_toEndOf="parent"
+
         app:navGraph="@navigation/my_nav"/>
 
 
