--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -4,8 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.addFragment">
+    tools:context=".fragments.AddFragment">
 
+    <ImageView
+        android:id="@+id/addProductImage"
+        android:layout_width="160dp"
+        android:layout_height="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="112dp"
+        android:layout_marginStart="105dp"
+        android:src="@drawable/ic_photo"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="onChooseImageClick" />
 
     <EditText
         android:id="@+id/addModelName"
@@ -17,7 +29,7 @@
         android:layout_marginStart="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Впишите название товараName"
+        android:hint="Впишите название товара"
         android:textColorHint="#C7CBCB"
         android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,26 +85,24 @@
 
     <Button
         android:id="@+id/addButton"
-
-        android:layout_width="120dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="117dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="24dp"
         android:layout_marginRight="56dp"
-        android:background="#2A8CFF"
-        android:text="Добавить"
+        android:backgroundTint="#2A8CFF"
         android:clickable="true"
+        android:text="Добавить"
         android:textColor="#FFFFFF"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/addQuantity" />
 
     <Button
         android:id="@+id/cancelButton"
-        android:clickable="true"
-        android:layout_width="120dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="0dp"
+        android:layout_width="124dp"
+        android:layout_height="56dp"
         android:layout_marginRight="72dp"
-        android:background="@color/white"
+        android:backgroundTint="@color/white"
+        android:clickable="true"
         android:text="Отмена"
         android:textColor="#2A8CFF"
         app:layout_constraintRight_toLeftOf="@id/addButton"
