--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.HomeFragment">
+    tools:context=".fragments.Home.HomeFragment">
 <!--    <fragment-->
 <!--        android:id="@+id/nav_host_fragment"-->
 <!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
@@ -14,15 +14,18 @@
 <!--        app:defaultNavHost="true" />-->
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
+        android:id="@+id/recyclerview1"
         android:layout_width="409dp"
         android:layout_height="729dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:spanCount="2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/customer_cards" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatButton"
@@ -32,6 +35,7 @@
         android:layout_marginBottom="64dp"
         android:clickable="true"
         android:focusable="true"
+        android:visibility="visible"
         android:src="@drawable/baseline_add_24"
         android:tint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
