--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -84,29 +84,42 @@
         tools:layout_editor_absoluteY="361dp" />
 
     <Button
-        android:id="@+id/addButton"
+        android:id="@+id/updateButton"
         android:layout_width="117dp"
         android:layout_height="56dp"
         android:layout_marginTop="24dp"
-        android:layout_marginRight="56dp"
         android:backgroundTint="#2A8CFF"
         android:clickable="true"
-        android:text="Добавить"
+        android:text="Сохранить"
         android:textColor="#FFFFFF"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/divider"
         app:layout_constraintTop_toBottomOf="@id/updateQuantity" />
 
     <Button
         android:id="@+id/cancelButton"
         android:layout_width="124dp"
         android:layout_height="56dp"
-        android:layout_marginRight="72dp"
         android:backgroundTint="@color/white"
         android:clickable="true"
         android:text="Отмена"
         android:textColor="#2A8CFF"
-        app:layout_constraintRight_toLeftOf="@id/addButton"
-        app:layout_constraintTop_toTopOf="@id/addButton" />
+        app:layout_constraintEnd_toStartOf="@+id/divider"
+        app:layout_constraintRight_toLeftOf="@id/updateButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/updateButton" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="1dp"
+        android:layout_height="729dp"
+        android:background="?android:attr/listDivider"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="1dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
