--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -88,25 +88,37 @@
         android:layout_width="117dp"
         android:layout_height="56dp"
         android:layout_marginTop="24dp"
-        android:layout_marginRight="56dp"
         android:backgroundTint="#2A8CFF"
         android:clickable="true"
         android:text="Добавить"
         android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/divider2"
         app:layout_constraintTop_toBottomOf="@id/addQuantity" />
 
     <Button
         android:id="@+id/cancelButton"
         android:layout_width="124dp"
         android:layout_height="56dp"
-        android:layout_marginRight="72dp"
         android:backgroundTint="@color/white"
         android:clickable="true"
         android:text="Отмена"
         android:textColor="#2A8CFF"
+        app:layout_constraintEnd_toStartOf="@+id/divider2"
         app:layout_constraintRight_toLeftOf="@id/addButton"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/addButton" />
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="1dp"
+        android:layout_height="729dp"
+        android:background="?android:attr/listDivider"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="1dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
