--- a/app/src/main/res/layout/customer_cards.xml
+++ b/app/src/main/res/layout/customer_cards.xml
@@ -1,83 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/cardItem"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardItem"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="16sp"
-    android:layout_marginLeft="16dp"
-    android:layout_marginTop="152dp">
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="85dp"
+    android:orientation="vertical"
+    android:padding="16sp">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="155dp"
+        android:layout_height="265dp"
+        app:layout_constraintRight_toRightOf="@id/cardItem"
+        app:layout_constraintTop_toTopOf="@id/cardItem"
+        app:cardCornerRadius="6dp"
+        app:cardElevation="5dp"
+        app:cardUseCompatPadding="true">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/dots"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/dots"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="5dp"/>
 
 
-       <ImageView
-           android:id="@+id/dots"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:src="@drawable/dots"
-           app:layout_constraintRight_toRightOf="parent"
-           app:layout_constraintTop_toTopOf="parent"
-           />
+            <ImageView
+                android:id="@+id/productImage"
+                android:layout_width="128dp"
+                android:layout_height="86dp"
+                android:layout_marginTop="45dp"
+                android:src="@drawable/ic_photo"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginLeft="4dp"/>
 
 
+            <TextView
+                android:id="@+id/nameModel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/open_sans_bold"
+                android:text="Air Jordan"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/productImage" />
 
-       <ImageView
-           android:id="@+id/productImage"
-           android:layout_width="128dp"
-           android:layout_height="86dp"
-           app:layout_constraintTop_toTopOf="parent"
-           app:layout_constraintLeft_toLeftOf="parent"
-           android:layout_marginTop="45dp"
-           android:src="@drawable/ic_photo" />
+            <TextView
+                android:id="@+id/modelCost"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="1dp"
+                android:fontFamily="@font/open_sans_bold"
+                android:text="$ 1500.00"
+                android:textColor="#75B4FE"
+                android:textSize="18sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nameModel" />
 
+            <TextView
+                android:id="@+id/nameCompany"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/open_sans_bold"
+                android:text="Nike"
+                android:textColor="#ADAEAE"
+                android:textSize="14sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/modelCost" />
 
-       <TextView
-           android:id="@+id/nameModel"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_marginLeft="16dp"
-           android:layout_marginTop="20dp"
-           android:fontFamily="@font/open_sans_bold"
-           android:text="Air Jordan"
-           android:textColor="@color/black"
-           android:textSize="14sp"
-           app:layout_constraintLeft_toLeftOf="parent"
-           app:layout_constraintTop_toBottomOf="@+id/productImage" />
-       <TextView
-           android:id="@+id/modelCost"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="$ 1500.00"
-           android:textSize="18sp"
-           android:textColor="#75B4FE"
-           android:fontFamily="@font/open_sans_bold"
-           app:layout_constraintLeft_toLeftOf="parent"
-           android:layout_marginLeft="16dp"
-           android:layout_marginTop="1dp"
-           app:layout_constraintTop_toBottomOf="@+id/nameModel"/>
-       <TextView
-           android:id="@+id/nameCompany"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="Nike"
-           android:textSize="14sp"
-           android:textColor="#ADAEAE"
-           android:fontFamily="@font/open_sans_bold"
-           app:layout_constraintLeft_toLeftOf="parent"
-           android:layout_marginLeft="16dp"
-           android:layout_marginTop="5dp"
-           app:layout_constraintTop_toBottomOf="@+id/modelCost"/>
-       <TextView
-           android:id="@+id/modelQuantity"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="105 шт"
-           android:textSize="14sp"
-           android:textColor="#ADAEAE"
-           android:fontFamily="@font/open_sans_bold"
-           app:layout_constraintLeft_toLeftOf="parent"
-           android:layout_marginLeft="16dp"
-           android:layout_marginTop="5dp"
-           app:layout_constraintTop_toBottomOf="@+id/nameCompany"/>
-
+            <TextView
+                android:id="@+id/modelQuantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/open_sans_bold"
+                android:text="105 шт"
+                android:textColor="#ADAEAE"
+                android:textSize="14sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nameCompany" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
